--- a/src/app/modules/disbursement/budget/update-item/update-item.component.html
+++ b/src/app/modules/disbursement/budget/update-item/update-item.component.html
@@ -3,20 +3,20 @@
       <div class="row">
         <div class="form-group col">
           <label>Budget Item</label>
-          <input class="form-control" name="itemName" #itemName="ngModel" [(value)]="myBudgetItem.name" required>
+          <input class="form-control" name="itemName" #itemName="ngModel" [(ngModel)]="myBudgetItem.name" required>
         </div>
       </div>
 
       <div class="form-group row">
         <div class="col">
           <label>Budget Code</label>
-          <input class="form-control" name="itemCode" #itemCode="ngModel" [(value)]="myBudgetItem.code" placeholder="Budget Code" required>
+          <input class="form-control" name="itemCode" #itemCode="ngModel" [(ngModel)]="myBudgetItem.code" placeholder="Budget Code" required>
         </div>
       </div>
       <div class="form-group row">
         <div class="col">
           <label>Total Budget Amount</label>
-          <app-amount-input [(value)]="myBudgetItem.totalBudget"></app-amount-input>
+          <app-amount-input [(ngModel)]="myBudgetItem.totalBudget"></app-amount-input>
         </div>
       </div>
     </div>
