--- a/src/app/modules/employeemodule/employeedeploymentmanagement/employeedeploymentmanagement.component.html
+++ b/src/app/modules/employeemodule/employeedeploymentmanagement/employeedeploymentmanagement.component.html
@@ -30,7 +30,7 @@
         </nb-tabset>
         <ngx-tableheader></ngx-tableheader>
 
-        <ngx-tablecomponent [tableColum]="tableColumns"></ngx-tablecomponent>
+        <ngx-tablecomponent [tableColum]="tableColumns" [userData]='data'></ngx-tablecomponent>
     </nb-card-body>
 
 
