--- a/src/app/modules/employeemodule/existrequest/existrequest.component.html
+++ b/src/app/modules/employeemodule/existrequest/existrequest.component.html
@@ -1,4 +1,6 @@
-<ngx-componentsheader pageName='Exit Request'>
+
+<ngx-componentsheader 
+ pageName='Exit Request'>
 </ngx-componentsheader>
 
 
@@ -108,9 +110,9 @@
                     </nb-card-header>
 
                     <form>
+                       
                         <div class="form-group row">
-                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Personal Email
-                                Address</label>
+                            <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Reason For Retirement</label>
                             <div class="col-sm-8">
                                 <input type="text" nbInput fullWidth placeholder=" Enter Personal Email Address">
                             </div>
