--- a/src/app/modules/employeemodule/retirement/retirement.component.html
+++ b/src/app/modules/employeemodule/retirement/retirement.component.html
@@ -21,7 +21,7 @@
         </nb-tabset>
         <ngx-tableheader></ngx-tableheader>
 
-        <ngx-tablecomponent [tableColum]="tableColumns"></ngx-tablecomponent>
+        <ngx-tablecomponent [userData]='data' [tableColum]="tableColumns"></ngx-tablecomponent>
     </nb-card-body>
 
 
