--- a/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
+++ b/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
@@ -11,10 +11,8 @@
           <div class="col-sm-6 linear-form">
             <div class="form-group">
               <label>Channel</label>
-              <select
-                class="form-control"
-                placeholder="Select Channel"
-              ></select>
+              <select name="" id="" class="form-control  "></select>
+              <option value=""></option>
             </div>
             <div class="form-group">
               <label>Disburse for</label>
