--- a/src/app/modules/employeemodule/managementexist/managementexist.component.html
+++ b/src/app/modules/employeemodule/managementexist/managementexist.component.html
@@ -1,6 +1,13 @@
-<ngx-componentsheader pageName='Exit Management' [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
-</ngx-componentsheader>
+<div *ngIf="order">
+  <ngx-componentsheader pageName='Retirement'>
+  </ngx-componentsheader>
 
+</div>
+<div *ngIf="!order">
+  <ngx-componentsheader pageName='Exit Management' [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
+  </ngx-componentsheader>
+
+</div>
 
 <nb-card style="margin-top: 20px;">
   <nb-card-body>
@@ -89,39 +96,62 @@
     </div> -->
   <div class="container" style="margin-top: 3rem;">
     <nb-card-body>
-      <form>
-        <div class="form-group row">
+      <form [formGroup]="messageForm">
+        <h5 *ngIf="success"> your form is valid!</h5>
+        <div class="form-group row" *ngIf="!order">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Reason For Termination</label>
           <div class="col-sm-8">
             <input type="text" nbInput fullWidth placeholder="Company Enter Reason For Termination"
-            name = "ReasonForLeaving" ([ngModel])="ReasonForLeaving">
+              name="ReasonForLeaving" ([ngModel])="ExitRequest.ReasonForLeaving" required #ReasonForLeaving="ngModel">
+            <!-- [(ngModel)]="leaveTypeModel.minDays" required> -->
+            <div *ngIf="ReasonForLeaving.invalid && (ReasonForLeaving.dirty || ReasonForLeaving.touched)" class="error">
+              <div *ngIf="ReasonForLeaving.errors.required"> Reason is required</div>
+            </div>
           </div>
         </div>
+
+        <div class="form-group row" *ngIf="order">
+          <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Reason For Retirement</label>
+          <div class="col-sm-8">
+            <input type="text" nbInput fullWidth placeholder="Company Enter Reason For Termination"
+              name="ReasonForLeaving" ([ngModel])="ReasonForLeaving" formControlName="ReasonForLeaving">
+          </div>
+        </div>
+
         <div class="form-group row">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Sub-Reason</label>
           <div class="col-sm-8">
-            <input type="text" nbInput fullWidth placeholder="Enter Sub-Reason"([ngModel])="SubReason" name="SubReason">
+            <input type="text" nbInput fullWidth placeholder="Enter Sub-Reason" name="subReason" ([ngModel])="subReason"
+              formControlName="SubReason">
+            <div>
+              <div *ngIf="messageForm.controls.name.errors" class="error">
+                <div *ngIf="messageForm.controls.name.errors.required"> your sub-Reason  is required</div>
+              </div>
+              <!-- <div *ngIf="subReason.errors.required"> Sub-Reason is required</div> -->
+            </div>
           </div>
         </div>
+
         <div class="form-group row">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Source of initiation</label>
           <div class="col-sm-8">
-            <input type="text" nbInput fullWidth placeholder="Enter Source of initiation" [(ngModel)]="SourceOfInitiation"
-            name="SourceOfInitiation">
+            <input type="text" nbInput fullWidth placeholder="Enter Source of initiation"
+              [(ngModel)]="SourceOfInitiation" name="SourceOfInitiation" formControlName="SourceOfInitiation">
           </div>
         </div>
         <div class="form-group row">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Date of Exit</label>
           <div class="col-sm-8">
             <input type="text" nbInput fullWidth placeholder="Enter Date of Exit" [(ngModel)]="DateOfExit"
-            name="DateOfExit">
+              name="DateOfExit" formControlName="DateOfExit">
           </div>
         </div>
         <!-- <hr>jj-{{selectedOption}}=uuuu -->
         <div class="form-group row" style="margin-top: 15px;">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Upload Affected Employee</label>
           <div class="col-sm-8">
-            <nb-radio-group [(ngModel)]="selectedOption" name="selectedOption" class="d-flex">
+            <nb-radio-group [(ngModel)]="selectedOption" name="selectedOption" class="d-flex"
+              formControlName="selectedOption">
               <nb-radio value="1">Bulk Upload</nb-radio>
               <nb-radio value="2">Individual Upload</nb-radio>
 
@@ -136,7 +166,8 @@
           <div class="col-md-8 col-xxl-8 ">
             <div style="display: flex;flex-direction: row;">
               <div>
-                <ngx-file-upload [(value)]="FileUpload" class="form-control"></ngx-file-upload>
+                <ngx-file-upload [(value)]="FileUpload"  class="form-control" formControlName="FileUpload">
+                </ngx-file-upload>
               </div>
               <div style="padding-left: 10px;display: flex;align-items: center;flex: auto;">
                 <img style="height: 20px; margin-right: 10px;" src="assets/icons/download.jpg" alt=""><span
@@ -156,7 +187,8 @@
           <div class="col-md-8 col-xxl-8 ">
             <div style="display: flex;flex-direction: row;">
               <div>
-                <ngx-file-upload  [(value)]="DocUpload" class="form-control"></ngx-file-upload>
+                <ngx-file-upload [(value)]="DocUpload" class="form-control">
+                </ngx-file-upload>
               </div>
               <div style="padding-left: 10px;display: flex;align-items: center;flex: auto;">
                 Not More than 1 mb
@@ -172,8 +204,9 @@
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Additional comment</label>
           <div class="col-sm-8">
 
-            <textarea rows="5" nbInput fullWidth placeholder="Enter Additional comment here" ([ngModel])="AdditionalComment"
-            name="AdditionalComment"></textarea>
+            <textarea rows="5" nbInput fullWidth placeholder="Enter Additional comment here"
+              ([ngModel])="AdditionalComment"  name="AdditionalComment" required></textarea>
+
           </div>
 
         </div>
@@ -182,7 +215,8 @@
           <div class="col-sm-4 col-form-label listsubheader"></div>
           <div class="col-sm-8" style=" display: flex;justify-content: center; margin-top: 3rem;margin-bottom: 2rem;">
 
-            <button nbButton status="primary" style="display: flex; justify-content: center;" (submit)="onSubmit()">Proceed</button>
+            <button nbButton status="primary" style="display: flex; justify-content: center;"
+              (submit)="onSubmit()">Proceed</button>
           </div>
 
         </div>
