Updated Disbursement Setup

--- a/src/app/modules/disbursement/budget/setup/setup.component.html
+++ b/src/app/modules/disbursement/budget/setup/setup.component.html
@@ -24,7 +24,7 @@
       <div class="form-group row" style="margin-top: 20px">
         <div class="col">
           <label></label>
-        <button nbButton status="primary" (click)="addBudget()" [disabled]="budgetForm.invalid">Save and Continue</button>
+        <button nbButton status="primary" (click)="addBudget()" [disabled]="disableSubmitbtn">Save and Continue</button>
         </div>
       </div>
     </div>
