--- a/src/app/modules/requests-and-complaints/complaint-detail/complaint-detail.component.html
+++ b/src/app/modules/requests-and-complaints/complaint-detail/complaint-detail.component.html
@@ -30,7 +30,7 @@
   </div>
   <h5>{{ selectedComplaint.title }}</h5>
   <div>{{ selectedComplaint.description }}</div>
-  <div class="actions">
+  <!-- <div class="actions">
     <a (click)="replyComplaint()">Reply</a>
     <a (click)="approveComplaint()">Approve</a>
     <a (click)="rejectComplaint()">Decline</a>
@@ -45,5 +45,5 @@
       <div class="space-2"></div>
       <button outline nbButton status="primary">Cancel</button>
     </div>
-  </div>
+  </div> -->
 </ng-template>
