--- a/src/app/modules/disbursement/budget/setup/setup.component.html
+++ b/src/app/modules/disbursement/budget/setup/setup.component.html
@@ -24,7 +24,7 @@
       <div class="form-group row" style="margin-top: 20px">
         <div class="col">
           <label></label>
-        <button nbButton status="primary" (click)="addBudget()" [disabled]="disableSubmitbtn">Save and Continue</button>
+        <button nbButton status="primary" (click)="addBudget()" [disabled]="!disableSubmitbtn">Save and Continue</button>
         </div>
       </div>
     </div>
@@ -38,14 +38,14 @@
           <div class="row">
             <div class="form-group col">
               <label>Budget Item</label>
-              <input class="form-control" name="itemName" #itemName="ngModel" [(ngModel)]="budgetItem.name" [(value)]="budgetItem.name" required>
+              <input class="form-control" name="itemName" #itemName="ngModel" [(ngModel)]="budgetItem.name" required>
             </div>
           </div>
 
           <div class="form-group row">
             <div class="col">
               <label>Budget Code</label>
-              <input class="form-control" name="itemCode" #itemCode="ngModel" [(ngModel)]="budgetItem.code" [(value)]="budgetItem.code" placeholder="Budget Code" required>
+              <input class="form-control" name="itemCode" #itemCode="ngModel" [(ngModel)]="budgetItem.code" placeholder="Budget Code" required>
             </div>
           </div>
           <div class="form-group row">
