Updated Disbursement Setup

--- a/src/app/modules/disbursement/overall-budget/overall-budget.component.html
+++ b/src/app/modules/disbursement/overall-budget/overall-budget.component.html
@@ -178,13 +178,13 @@
     </div>
   </ngx-template>
 
-  <ngx-template *ngIf="finLoading == true">
+  <!-- <ngx-template *ngIf="finLoading == true">
     <div *ngIf="finLoading == true" style="background-color: white; min-height: 10vh;width: 100%;display: flex;justify-content: center;align-items: center;">
       <div style="font-size: 32px;">
         <i class="fa fa-spin fa-spinner"></i>&nbsp;Loading...
       </div>
     </div>
-  </ngx-template>
+  </ngx-template> -->
 
   <div>
     <ngx-side-modal [(show)]='addItemModal' style="width: 500px;">
