Updated Disbursement Module

--- a/src/app/modules/disbursement/budget/update-item/update-item.component.html
+++ b/src/app/modules/disbursement/budget/update-item/update-item.component.html
@@ -35,7 +35,7 @@
       <div class="form-group row">
         <div class="col">
           <label>Amount</label>
-          <app-amount-input [(value)]="myBudgetItem.budgetItemAllocations.DisbursementBudgetItemAllocation.allocatedAmount"></app-amount-input>
+          <app-amount-input [(value)]="itemAllocation.allocatedAmount"></app-amount-input>
         </div>
       </div>
 
