--- a/src/app/modules/disbursement/budget/setup/setup.component.html
+++ b/src/app/modules/disbursement/budget/setup/setup.component.html
@@ -35,30 +35,38 @@
 <ng-template [ngIf]="page === 2">
     <h4>Update Budget Item</h4>
       <form #editItem="ngForm" name="editItem">
-          <div class="row">
-            <div class="form-group col">
+          <div class="form-group row">
+            <div class="col-sm-2">
               <label>Budget Item</label>
+            </div>
+            <div class="col-sm-5">
               <input class="form-control" name="itemName" #itemName="ngModel" [(ngModel)]="budgetItem.name" required>
             </div>
           </div>
 
           <div class="form-group row">
-            <div class="col">
+            <div class="col-sm-2">
               <label>Budget Code</label>
+            </div>
+            <div class="col-sm-5">
               <input class="form-control" name="itemCode" #itemCode="ngModel" [(ngModel)]="budgetItem.code" placeholder="Budget Code" required>
             </div>
           </div>
           <div class="form-group row">
-            <div class="col">
+            <div class="col-sm-2">
               <label>Total Budget Amount</label>
+            </div>
+            <div class="col-sm-5">
               <app-amount-input [(value)]="budgetItem.totalBudget"></app-amount-input>
             </div>
           </div>
 
           <hr/>
           <div class="form-group row">
-          <div class="col">
+          <div class="col-sm-2">
             <label>Department</label>
+          </div>
+          <div class="col-sm-5">
             <select class="form-control" name="department" #department="ngModel" [(ngModel)]="departments.department_id" required>
               <option value="1">Select Department</option>
               <option *ngFor="let dep of allDepartments" value=dep.code>{{dep.name}}</option>
@@ -66,15 +74,19 @@
           </div>
           </div>
           <div class="form-group row">
-            <div class="col">
+            <div class="col-sm-2">
               <label>Allocated amount</label>
+            </div>
+            <div class="col-sm-5">
               <app-amount-input [(value)]="departments.amount"></app-amount-input>
             </div>
           </div>
 
-          <div class="form-group" style="margin-top: 20px">
-            <label></label>
-            <div>
+          <div class="form-group row" style="margin-top: 20px">
+            <div class="col-sm-2">
+              <label></label>
+            </div>
+            <div class="col-sm-5">
                 <button nbButton status="primary" class="border-none" (click)="addDepartment()" outline>
                   <nb-icon icon="plus-outline"></nb-icon>
                   Add department
@@ -82,11 +94,13 @@
             </div>
           </div>
 
-          <div class="form-group" style="margin-top: 20px">
-            <label></label>
-            <div>
+          <div class="form-group row" style="margin-top: 20px">
+            <div class="col-sm-2">
+              <label></label>
+            </div>
+            <div class="col-sm-5">
                 <button nbButton status="primary" outline class="white-background mr-2">Cancel</button>
-                <button nbButton status="primary" (click)="updateBudgetItem($event)">Update</button>
+                <button nbButton status="primary" (click)="updateBudgetItem()">Update</button>
             </div>
           </div>
         </form>
