--- a/src/app/modules/employeemodule/managementexist/managementexist.component.html
+++ b/src/app/modules/employeemodule/managementexist/managementexist.component.html
@@ -20,93 +20,17 @@
 
   </nb-card-body>
 
-  <!--    <div class="main-page-container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="form-group">
-            <label>Reason For Termination</label>
-            <input class="form-control" placeholder="Enter Reason For Termination" />
-          </div>
-          <div class="form-group">
-            <label>Sub-Reason</label>
-            <input class="form-control" />
-          </div>
 
-          <div class="form-group">
-            <label>Source of Initiation</label>
-            <input class="form-control" placeholder="Enter Source of Initiation" />
-          </div>
-          <div class="form-group">
-            <label>Date of Exit</label>
-            <input class="form-control" placeholder="Enter Date of Exit" />
-          </div>
-
-
-          <hr style="margin-top: 15px;">
-          <nb-card-body>
-            <div style="border: 15px;" class="form-group">
-              <label for="" style="margin-left: -5px;">Upload Affected Employee</label>
-              <nb-radio-group [(ngModel)]="selectedOption" class="d-flex">
-                <nb-radio value="1">Bulk Upload</nb-radio>
-                <nb-radio value="2">Individual Upload</nb-radio>
-
-              </nb-radio-group>
-
-            </div>
-
-
-            <div class="form-group">
-              <label>Upload Employee Csv File</label>
-              <ngx-file-upload class="form-control"></ngx-file-upload>
-            </div>
-
-            <hr>
-
-            <div class="form-group row">
-              <div class="col-md-4" style="display: flex;align-items:center">
-                <label for=""  >Upload Unsupporting Document</label>
-              </div>
-              <div class="col-md-8 col-xxl-8 ">
-                <div style="display: flex;flex-direction: row;">
-                  <div>
-                    <ngx-file-upload class="form-control"></ngx-file-upload>
-                  </div>
-                  <div style="padding-left: 10px;display: flex;align-items: center;flex: auto;">
-                   Not More than 1 mb
-                  </div>
-                </div>
-                
-               
-              </div>
-
-            </div>
-          </nb-card-body>
-
-
-          <div class="form-group">
-            <label>Allow sending of mails</label>
-            <input type="checkbox" />
-          </div>
-          <div class="form-group" style="margin-top: 20px">
-            <label></label>
-            <button nbButton status="primary">Submit</button>
-          </div>
-        </div>
-      </div>
-    </div> -->
   <div class="container" style="margin-top: 3rem;">
     <nb-card-body>
-      <form [formGroup]="messageForm">
+      <form >
         <h5 *ngIf="success"> your form is valid!</h5>
         <div class="form-group row" *ngIf="!order">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Reason For Termination</label>
           <div class="col-sm-8">
             <input type="text" nbInput fullWidth placeholder="Company Enter Reason For Termination"
-              name="ReasonForLeaving" ([ngModel])="ExitRequest.ReasonForLeaving" required #ReasonForLeaving="ngModel">
-            <!-- [(ngModel)]="leaveTypeModel.minDays" required> -->
-            <div *ngIf="ReasonForLeaving.invalid && (ReasonForLeaving.dirty || ReasonForLeaving.touched)" class="error">
-              <div *ngIf="ReasonForLeaving.errors.required"> Reason is required</div>
-            </div>
+              name="ReasonForLeaving"  required #ReasonForLeaving="ngModel">
+     
           </div>
         </div>
 
@@ -114,20 +38,17 @@
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Reason For Retirement</label>
           <div class="col-sm-8">
             <input type="text" nbInput fullWidth placeholder="Company Enter Reason For Termination"
-              name="ReasonForLeaving" ([ngModel])="ReasonForLeaving" formControlName="ReasonForLeaving">
+              name="ReasonForLeaving"  formControlName="ReasonForLeaving">
           </div>
         </div>
 
         <div class="form-group row">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Sub-Reason</label>
           <div class="col-sm-8">
-            <input type="text" nbInput fullWidth placeholder="Enter Sub-Reason" name="subReason" ([ngModel])="subReason"
+            <input type="text" nbInput fullWidth placeholder="Enter Sub-Reason" name="subReason" [(ngModel)]="subReason"
               formControlName="SubReason">
             <div>
-              <div *ngIf="messageForm.controls.name.errors" class="error">
-                <div *ngIf="messageForm.controls.name.errors.required"> your sub-Reason  is required</div>
-              </div>
-              <!-- <div *ngIf="subReason.errors.required"> Sub-Reason is required</div> -->
+       
             </div>
           </div>
         </div>
@@ -136,7 +57,7 @@
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Source of initiation</label>
           <div class="col-sm-8">
             <input type="text" nbInput fullWidth placeholder="Enter Source of initiation"
-              [(ngModel)]="SourceOfInitiation" name="SourceOfInitiation" formControlName="SourceOfInitiation">
+               name="SourceOfInitiation" formControlName="SourceOfInitiation">
           </div>
         </div>
         <div class="form-group row">
@@ -150,7 +71,7 @@
         <div class="form-group row" style="margin-top: 15px;">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Upload Affected Employee</label>
           <div class="col-sm-8">
-            <nb-radio-group [(ngModel)]="selectedOption" name="selectedOption" class="d-flex"
+            <nb-radio-group  name="selectedOption" class="d-flex"
               formControlName="selectedOption">
               <nb-radio value="1">Bulk Upload</nb-radio>
               <nb-radio value="2">Individual Upload</nb-radio>
@@ -166,7 +87,7 @@
           <div class="col-md-8 col-xxl-8 ">
             <div style="display: flex;flex-direction: row;">
               <div>
-                <ngx-file-upload [(value)]="FileUpload"  class="form-control" formControlName="FileUpload">
+                <ngx-file-upload   class="form-control" formControlName="FileUpload">
                 </ngx-file-upload>
               </div>
               <div style="padding-left: 10px;display: flex;align-items: center;flex: auto;">
@@ -187,7 +108,7 @@
           <div class="col-md-8 col-xxl-8 ">
             <div style="display: flex;flex-direction: row;">
               <div>
-                <ngx-file-upload [(value)]="DocUpload" class="form-control">
+                <ngx-file-upload  class="form-control">
                 </ngx-file-upload>
               </div>
               <div style="padding-left: 10px;display: flex;align-items: center;flex: auto;">
@@ -205,7 +126,7 @@
           <div class="col-sm-8">
 
             <textarea rows="5" nbInput fullWidth placeholder="Enter Additional comment here"
-              ([ngModel])="AdditionalComment"  name="AdditionalComment" required></textarea>
+               name="AdditionalComment" required></textarea>
 
           </div>
 
@@ -216,7 +137,7 @@
           <div class="col-sm-8" style=" display: flex;justify-content: center; margin-top: 3rem;margin-bottom: 2rem;">
 
             <button nbButton status="primary" style="display: flex; justify-content: center;"
-              (submit)="onSubmit()">Proceed</button>
+              (click)="onSubmit()">Proceed</button>
           </div>
 
         </div>
