--- a/src/app/modules/employeemodule/managementexist/managementexist.component.html
+++ b/src/app/modules/employeemodule/managementexist/managementexist.component.html
@@ -45,7 +45,7 @@
         <div class="form-group row">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Sub-Reason</label>
           <div class="col-sm-8">
-            <input type="text" nbInput fullWidth placeholder="Enter Sub-Reason" name="subReason" [(ngModel)]="subReason"
+            <input type="text" nbInput fullWidth placeholder="Enter Sub-Reason" name="subReason" 
               formControlName="SubReason">
             <div>
        
@@ -63,7 +63,7 @@
         <div class="form-group row">
           <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Date of Exit</label>
           <div class="col-sm-8">
-            <input type="text" nbInput fullWidth placeholder="Enter Date of Exit" [(ngModel)]="DateOfExit"
+            <input type="text" nbInput fullWidth placeholder="Enter Date of Exit" 
               name="DateOfExit" formControlName="DateOfExit">
           </div>
         </div>
